--- a/google maps api/maps.html
+++ b/google maps api/maps.html
@@ -1,26 +1,79 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<style>
-			#map {
-				width: 500px;
-				height: 400px;
-				background-color: #CCC;
-			}
-		</style>
-	</head>
-	<body>
-		<div id="map"></div>
-	</body>
-	<script>
-		function initMap() {
-			var mapDiv = document.getElementById('map');
-			var map = new google.maps.Map(mapDiv, {
-				center: {lat: 44.540, lng: -78.546},
-				zoom: 8
-			});
-		}
-	</script>
-	<script src="https://maps.googleapis.com/maps/api/js?callback=initMap" async defer> 
-	</script>
-</html>
+<head>
+    <title>Neighborhood map</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+    <!-- Bootstrap core CSS -->
+    <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet" media="screen">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
+</head>
+<body>
+	<!-- <div class="container">
+		<div class="row">
+			
+		</div>
+		
+		<div class="row">
+			<div id="map-outer" class="col-md-12">
+			<div id="location list" class="col-md-4">
+				
+			</div>
+			<div id="map-container" class="col-md-8"></div>
+			</div>
+		</div>
+	</div> -->
+<form class="navbar-form">
+	<div class = "form-group">
+            <input type = "text" class = "form-control" placeholder = "Search">
+    </div>
+	<span class="glyphicon glyphicon-search"></span>
+</form>
+<div id="map-canvas"></div>
+<div class="container-fluid" id="main">
+  <div class="row">
+  	<div class="col-xs-4" id="left">
+    	<ul>
+			<li>truffles</li>
+					<li>smally's</li>
+					<li>amoeba</li>
+					<li>matteo</li>
+					<li>rice bowl</li>
+					<li>chutny chang</li>
+				</ul>
+    </div>
+    <div class="col-xs-8"><!--map-canvas will be postioned here--></div>
+    
+  </div>
+</div>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js"></script>
+    <script>	
+ 
+      function init_map() {
+		var var_location = new google.maps.LatLng(12.978953, 77.599649);
+ 
+        var var_mapoptions = {
+          center: var_location,
+          zoom: 14
+        };
+
+        var var_map = new google.maps.Map(document.getElementById("map-canvas"),
+            var_mapoptions);
+
+		var var_marker = new google.maps.Marker({
+			position: var_location,
+			map: var_map,
+			title:"Bangalore"});
+ 
+		var_marker.setMap(var_map);	
+      }
+ 
+      google.maps.event.addDomListener(window, 'load', init_map);
+ 
+    </script>
+</body>
+</html
