--- a/google maps api/maps.html
+++ b/google maps api/maps.html
@@ -9,43 +9,36 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-	<!-- <div class="container">
-		<div class="row">
-			
-		</div>
-		
-		<div class="row">
-			<div id="map-outer" class="col-md-12">
-			<div id="location list" class="col-md-4">
-				
+<div class="navbar navbar-fixed-top navbar-custom">
+	<div class="navbar-header"><a class="navbar-brand" href="#">Jo's Locations</a>
+		<a class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</a>
+	</div>
+	<div class="navbar-collapse collapse">
+		<form class="navbar-form">
+			<div class="form-group" style="display:inline;">
+				<div class="input-group">
+					<input type="text" class="form-control" placeholder="Search location">
+					<span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
+				</div>
 			</div>
-			<div id="map-container" class="col-md-8"></div>
-			</div>
-		</div>
-	</div> -->
-<form class="navbar-form">
-	<div class = "form-group">
-            <input type = "text" class = "form-control" placeholder = "Search">
-    </div>
-	<span class="glyphicon glyphicon-search"></span>
-</form>
-<div id="map-canvas"></div>
-<div class="container-fluid" id="main">
-  <div class="row">
-  	<div class="col-xs-4" id="left">
-    	<ul>
-			<li>truffles</li>
-					<li>smally's</li>
-					<li>amoeba</li>
-					<li>matteo</li>
-					<li>rice bowl</li>
-					<li>chutny chang</li>
-				</ul>
-    </div>
-    <div class="col-xs-8"><!--map-canvas will be postioned here--></div>
-    
-  </div>
+		</form>
+	</div>
 </div>
+
+<!-- <div id="map-canvas"></div> -->
+<div class="container-fluid" id="main">
+	<div class="row">
+		<div class="col-xs-4" id="left">
+			<h2>List locations</h2>
+		</div>
+		<div class="col-xs-8" id="map-canvas"></div>
+	</div>
+</div>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
