--- a/google maps api/maps.html
+++ b/google maps api/maps.html
@@ -7,6 +7,14 @@
     <!-- Bootstrap core CSS -->
     <link href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/css/bootstrap.css" rel="stylesheet" media="screen">
     <link rel="stylesheet" type="text/css" href="css/main.css">
+
+   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+    <script type="text/javascript" src="js/map.js"></script>
 </head>
 <body>
 <div class="navbar navbar-fixed-top navbar-custom">
@@ -38,35 +46,5 @@
 		<div class="col-xs-8" id="map-canvas"></div>
 	</div>
 </div>
-
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.1.1/js/bootstrap.min.js"></script>
-    <script src="http://maps.google.com/maps/api/js"></script>
-    <script>	
- 
-      function init_map() {
-		var var_location = new google.maps.LatLng(12.978953, 77.599649);
- 
-        var var_mapoptions = {
-          center: var_location,
-          zoom: 14
-        };
-
-        var var_map = new google.maps.Map(document.getElementById("map-canvas"),
-            var_mapoptions);
-
-		var var_marker = new google.maps.Marker({
-			position: var_location,
-			map: var_map,
-			title:"Bangalore"});
- 
-		var_marker.setMap(var_map);	
-      }
- 
-      google.maps.event.addDomListener(window, 'load', init_map);
- 
-    </script>
 </body>
 </html
