--- a/p5 version1/index.html
+++ b/p5 version1/index.html
@@ -11,12 +11,20 @@
 			<form id="searchbox">
 				<input id="search" type="text" placeholder="Search location">
 				<input id="submit" type="submit" value="Search">
-			</form>
+			</form>			
+		</div>
+		<div class="location-list">
+			<div id="locations" data-bind="foreach: locationList">
+				<div>
+					<p data-bind="text: $data"></p>
+				</div>
+				<hr>
+			</div>
 		</div>
 
 		<script type="text/javascript" src="bower_components\jquery\dist\jquery.min.js"></script>
 		<script type="text/javascript" src="bower_components\knockout\dist\knockout.js"></script>
-		<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?libraries=places"></script>
 		<script type="text/javascript" src="js/app.js"></script>
 	</body>
 </html>
